# influxdb3_plugins

./: .gitignore  CONTRIBUTING.md  README_TEMPLATE.md  test-no-trigger.txt  validate_readme.py
.github/workflows/: publish-influxdata-plugin-utils.yml  publish-registry.yml  publish.yml  remind-sync-docs.yml  test-influxdata-plugin-utils.yml  validate-registry-plugins.yml
aditya-sairam/: README.md
influxdata-plugin-utils/: CHANGELOG.md  README.md  pyproject.toml
influxdata-plugin-utils/examples/simple_downsampler/: simple_downsampler.py  simple_downsampler.toml
influxdata-plugin-utils/src/influxdata_plugin_utils/: __init__.py  cache.py  config.py  introspection.py  parsing.py  write.py
influxdata-plugin-utils/tests/: test_introspection.py  test_package.py  test_parsing.py  test_write.py
influxdata/amqp_subscriber/: README.md  amqp_config_example.toml  amqp_subscriber.py  manifest.toml
influxdata/anomaly_detection_adtk/: README.md
influxdata/basic_transformation/: README.md  basic_transformation.py  basic_transformation_config_data_writes.toml  basic_transformation_config_scheduler.toml  manifest.toml
influxdata/bird_data_simulator/: README.md  bird_data_simulator.py  manifest.toml
influxdata/chronos_forecasting/: README.md  chronos_forecasting.py  chronos_forecasting_scheduler.toml  manifest.toml  requirements.txt
registry-guide/: CONTRIBUTING.md  REGISTRY_OPERATIONS.md  index.json
scripts/: influxdb3_validation_config.json  validate_influxdb3_syntax.py  validate_readme.py
test/: plugin_config.py  test_logging_security.py
(+173 files in other folders)
